# SimpleLLMFunc

./: .gitignore  .readthedocs.yaml  AGENT.md  CHANGELOG.md  Document.md  README.md  README_EN.md  README_ZH.md  SUPPORTED_TYPES.md  TRANSLATION_GUIDE.md  context7.json  env_template  project_structure.txt  pyproject.toml
.github/: copilot-instructions.md
SimpleLLMFunc/: __init__.py  config.py  self_reference.py  skills_cli.py
SimpleLLMGraph/: __init__.py
docs/: MULTILINGUAL_SETUP.md  Makefile  conf.py  langfuse_integration.md  requirements.txt
draft/: base_function.md  helper_function.md  refactor.md  type.md
examples/: README.md  agent_as_tool_example.py  async_llm_func.py  batch_translate.sh  custom_tool_event_example.py  dynamic_template_demo.py  ipython_kernel_example.py  llm_chat_example.py  llm_chat_raw_tooluse_example.py  llm_function_event_pydantic.py  llm_function_example.py  llm_function_pydantic_example.py  llm_function_token_usage.py  llm_sync_async_decorator_example.py  multi_agent_research_debate.py  multi_modality_toolcall.py  parallel_toolcall_example.py  parallel_toolcall_simple_example.py  provider_template.json  pydantic_return_example.py  pyrepl_example.py  response_api_example.py  runtime_primitives_basic_example.py  self_reference_basic_example.py  simple_manus.py  translate_po.py  tui_chat_example.py  tui_general_agent_example.py  tui_runtime_fork_subagent_example.py  tui_runtime_memory_example.py  tui_runtime_selfref_example.py  tui_self_fork_subagent_example.py  tui_self_reference_example.py
mintlify_docs/: contributing.mdx  docs.json  examples.mdx  guide.mdx  index.mdx  introduction.mdx  langfuse_integration.mdx  pyrepl.mdx  quickstart.mdx  tui.mdx
scripts/: batch_translate.sh  batch_translate_mintlify.sh  generate_manual_agent_flows.py  langfuse_tool_debug.py  mintlify_i18n_overrides.json  translate_docs_locale.py  (+1 more)
(+331 files in other folders)
