[tool.poetry]
name = "SimpleAgent"
version = "0.1.0"
description = ""
authors = ["Ni Jingzhe <lildinosaurni@outlook.com>"]
readme = "README.md"
packages = [{include = "SimpleAgent", from = "."}]

[tool.poetry.dependencies]
python = ">=3.10"
openai = ">=1.72.0,<2.0.0"
pyyaml = ">=6.0.2,<7.0.0"
zhipuai = ">=2.1.5.20250410,<3.0.0.0"
pydantic = ">=2.11.3,<3.0.0"
pydantic-settings = ">=2.8.1,<3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

