[tool.poetry]
name = "SimpleLLMFunc"
version = "0.7.2"
description = "A lightweight yet complete LLM/Agent application development framework. Provides decorators that use function docstrings as prompts, requiring no function body implementation while allowing you to benefit from function definitions and type annotations for higher development efficiency. Seamlessly integrate LLM capabilities into any Python project with minimal code."
authors = ["Ni Jingzhe <nijingzhe@zju.edu.cn>"]
readme = "README.md"
packages = [{ include = "SimpleLLMFunc", from = "." }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
openai = ">=2.0.0,<3.0.0"
pydantic = ">=2.11.5,<3.0.0"
pydantic-settings = ">=2.9.1,<3.0.0"
httpx = { extras = ["socks"], version = "^0.28.1" }
rich = "^14.0.0"
textual = ">=0.63.0,<1.0.0"
langfuse = "^4.0.0"
ipython = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-mock = "^3.14.1"
polib = "^1.2.0"
types-polib = "^1.2.0.20250401"
sphinx-intl = "^2.3.2"
myst-parser = "^4.0.1"
pytest-asyncio = "^1.3.0"
sphinx-rtd-theme = "^3.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
